háo đơn và chi tiết

--- a/WebsiteDental/Views/Shared/Components/MenuTop/Default.cshtml
+++ b/WebsiteDental/Views/Shared/Components/MenuTop/Default.cshtml
@@ -57,12 +57,9 @@
                         <div class="cart-header">
                             <h6 class="mb-3">Giỏ hàng của bạn</h6>
                         </div>
-                      @*   <div class="cart-items">
-                            <p class="text-center text-muted">Giỏ hàng trống</p>
-                        </div> *@
                         <div class="d-grid gap-2 mt-3">
                             <a href="/Shoppingcart" class="btn btn-primary">Xem giỏ hàng</a>
-                          
+                            <a href="/InvoiceHistory" class="btn btn-outline-secondary">Xem hóa đơn đã đặt</a>
                         </div>
                     </div>
                 </div>
