--- a/WebsiteDental/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/WebsiteDental/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
                     <!-- sidebar menu -->
                     <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
                         <div class="menu_section">
-                            <h3>General</h3>
+                            <h3>QUÁN LÝ CHỨC NĂNG CỦA TRANG </h3>
                             <ul class="nav side-menu">
                                 <li>
                                     <a><i class="fa fa-home"></i>  Quản lý Giao Diện <span class="fa fa-chevron-down"></span></a>
@@ -114,12 +114,12 @@
                             </ul>
                         </div>
                         <div class="menu_section">
-                            <h3>Live On</h3>
+                            <h3>QUẢN LÝ SẢN PHẨM-BÁN HÀNG</h3>
                             <ul class="nav side-menu">
                                 <li>
-                                    <a><i class="fa fa-bug"></i> Trang Bổ Sung <span class="fa fa-chevron-down"></span></a>
+                                    <a><i class="fa fa-bug"></i>Sản Phẩm Bán  <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu">
-                                        <li><a href="e_commerce.html">E-commerce</a></li>
+                                        <li><a href="@Url.Action("Index", "Invoices")">Quản lý đơn hàng</a></li>
                                         <li><a href="projects.html">Projects</a></li>
                                         <li><a href="project_detail.html">Project Detail</a></li>
                                         <li><a href="contacts.html">Contacts</a></li>
@@ -195,7 +195,7 @@
                         <ul class=" navbar-right">
                             <li class="nav-item dropdown open" style="padding-left: 15px;">
                                 <a href="javascript:;" class="user-profile dropdown-toggle" aria-haspopup="true" id="navbarDropdown" data-toggle="dropdown" aria-expanded="false">
-                                    <img src="/admin/images/img.jpg" alt="">Lê Nghĩa
+                                    <img src="/admin/images/img.jpg" alt=""> @ViewBag.Username
                                 </a>
                                 <div class="dropdown-menu dropdown-usermenu pull-right" aria-labelledby="navbarDropdown">
                                     <a class="dropdown-item" href="javascript:;"> Hồ Sơ Cá Nhân</a>
@@ -204,7 +204,8 @@
                                         <span>Cài Đặt</span>
                                     </a>
                                     <a class="dropdown-item" href="javascript:;">Trợ Giúp</a>
-                                    <a class="dropdown-item" href="login.html"><i class="fa fa-sign-out pull-right"></i>Đăng Xuất</a>
+
+                                    <a class="dropdown-item" href="/Account/Register"><i class="fa fa-sign-out pull-right"></i>Đăng Xuất</a>
                                 </div>
                             </li>
 
