--- a/WebsiteDental/Areas/Admin/Views/Invoices/Details.cshtml
+++ b/WebsiteDental/Areas/Admin/Views/Invoices/Details.cshtml
@@ -4,6 +4,11 @@
     ViewData["Title"] = "Details";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
+<style>
+    .body{
+        background-color: white;
+    }
+</style>
 
 <h1>Details</h1>
 
