--- a/WebsiteDental/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/WebsiteDental/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -331,5 +331,6 @@
 
     <!-- Custom Theme Scripts -->
     <script src="~/admin/build/js/custom.min.js"></script>
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
