xong quản lý đơn hàng

--- a/WebsiteDental/Areas/Admin/Views/Invoices/Index.cshtml
+++ b/WebsiteDental/Areas/Admin/Views/Invoices/Index.cshtml
@@ -197,7 +197,7 @@
                             Ngày phát hành
                         </th>
                         <th>
-                            Đã thanh toán
+                           Trạng thái đơn hàng
                         </th>
                         <th>
                             Sản phẩm
