--- a/WebsiteDental/Areas/Admin/Views/Home/Index.cshtml
+++ b/WebsiteDental/Areas/Admin/Views/Home/Index.cshtml
@@ -1,18 +1,31 @@
-﻿ <!-- page content -->
+﻿@using System.Globalization
+@{
+    ViewData["Title"] = "Trang quản trị";
+    decimal dailyRevenue = ViewBag.DailyRevenue != null ? (decimal)ViewBag.DailyRevenue : 0;
+}
+
+<!-- page content -->
 <div class="right_col" role="main">
     <!-- top tiles -->
     <div class="row" style="display: inline-block;">
         <div class="tile_count">
-            <div class="col-md-2 col-sm-4  tile_stats_count">
-                <span class="count_top"><i class="fa fa-user"></i> Tổng số bệnh nhân</span>
-                <div class="count">2500</div>
-                <span class="count_bottom"><i class="green">4% </i> Tổng bệnh nhân đã đăng ký trong hệ thống.</span>
+
+
+            <div class="col-md-2 col-sm-4 tile_stats_count">
+                <span class="count_top"><i class="fa fa-user"></i> Doanh thu đơn hàng</span>
+                <div class="count">@dailyRevenue.ToString("C0", new CultureInfo("vi-VN"))</div>
+                <span class="count_bottom"><i class="green"></i> Đơn hàng/Ngày</span>
             </div>
-            <div class="col-md-2 col-sm-4  tile_stats_count">
+
+
+            <div class="col-md-2 col-sm-4 tile_stats_count">
                 <span class="count_top"><i class="fa fa-clock-o"></i> Số lượt đặt lịch</span>
-                <div class="count">123.50</div>
-                <span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>3% </i> Tổng số lượt đặt lịch khám</span>
+                <div class="count">@ViewBag.TotalAppointmentsToday</div> <!-- Hiển thị tổng số lượt đặt lịch -->
+                <span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i> </i> Bác sĩ/Ngày</span>
             </div>
+
+
+
             <div class="col-md-2 col-sm-4  tile_stats_count">
                 <span class="count_top"><i class="fa fa-user"></i> Tổng số bác sĩ</span>
                 <div class="count green">2,500</div>
