--- a/WebsiteDental/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/WebsiteDental/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
             <div class="col-md-3 left_col">
                 <div class="left_col scroll-view">
                     <div class="navbar nav_title" style="border: 0;">
-                        <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>LTN-Dental</span></a>
+                        <a href="/Admin" class="site_title"><i class="fa fa-paw"></i> <span>LTN-Dental</span></a>
                     </div>
 
                     <div class="clearfix"></div>
@@ -127,9 +127,9 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a><i class="fa fa-windows"></i> Menu nhiều cấp <span class="fa fa-chevron-down"></span></a>
+                                    <a><i class="fa fa-windows"></i> Quản lý tài khoản <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu">
-                                        <li><a href="page_403.html">403 Error</a></li>
+                                        <li><a href="@Url.Action("Index", "Users")">Quản lý và Người dùng</a></li>
                                         <li><a href="page_404.html">404 Error</a></li>
                                         <li><a href="page_500.html">500 Error</a></li>
                                         <li><a href="plain_page.html">Plain Page</a></li>
