--- a/WebsiteDental/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/WebsiteDental/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -130,7 +130,7 @@
                                     <a><i class="fa fa-windows"></i> Quản lý tài khoản <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu">
                                         <li><a href="@Url.Action("Index", "Users")">Quản lý và Người dùng</a></li>
-                                        <li><a href="page_404.html">404 Error</a></li>
+                                        <li><a href="/Admin/Revenue">Quản lý doanh thu</a></li>
                                         <li><a href="page_500.html">500 Error</a></li>
                                         <li><a href="plain_page.html">Plain Page</a></li>
                                         <li><a href="login.html">Login Page</a></li>
